fix z-index with attribution

--- a/gmw/statics/css/gmw_main.css
+++ b/gmw/statics/css/gmw_main.css
@@ -42,6 +42,7 @@
   width: 50px;
   margin: 0;
   padding: 0;
+  z-index: 1000;
 }
 
 .sidebar-icon.app-icon {
